internet_gateway.tf

//Creating a Internet Gateway 
resource "aws_internet_gateway" "demo-igw" {
    vpc_id = "${aws_vpc.demo-vpc.id}"
    tags = {
      Name = "demo-igw"
    }
}
